--- a/github/inventory/github_values.yml
+++ b/github/inventory/github_values.yml
@@ -7,7 +7,6 @@ all:
     GITHUB_API_TOKEN: "[YOUR TOKEN]"
     GITHUB_HEARDER_ACCEPT: "application/vnd.github+json"
     GITHUB_API_VERSION: "2022-11-28"
-    GITHUB_USERNAME: "[GITHUB REPO username]"
     GITHUB_OWNER: "[GITHUB REPO OWNER]"
 
     # Repository variables
@@ -15,5 +14,6 @@ all:
 
     # Webhook variables
     GITHUB_API_WEBHOOK_BASE_URL: "{{ GITHUB_API_BASEURL }}/repos/{{GITHUB_OWNER}}"
+    REPO: "[REPO TO ACT ON]"
     WEBHOOK_URL: [THE URL FOR THEW WEBHOOK]
     WEBHOOK_SECRET: "[SECRET USE FOR THE WEBHOOK]"
