--- a/aws/create_ec2_instances.yaml
+++ b/aws/create_ec2_instances.yaml
@@ -54,7 +54,7 @@
     register: my_security_group
 
   - name: launch an ec2 instance
-    ec2:
+    amazon.aws.ec2_instance:
       instance_type: "{{ ec2_type | default('t2.micro') }}"
       region: us-east-2
       image: ami-0aa8fc2422063977a
