--- a/aws/create_ec2_instances.yaml
+++ b/aws/create_ec2_instances.yaml
@@ -29,7 +29,7 @@
 
 
   - name: create a subnet in the VPC
-    ec2_vpc_subnet_info:
+    amazon.aws.ec2_vpc_subnet:
       vpc_id: "{{vpc.vpc.id}}"
       region: "{{region}}"
       az: a
