--- a/aws/create_ec2_instances.yaml
+++ b/aws/create_ec2_instances.yaml
@@ -32,7 +32,7 @@
     amazon.aws.ec2_vpc_subnet:
       vpc_id: "{{vpc.vpc.id}}"
       region: "{{region}}"
-      az: a
+      az: "{{region}}a"
       state: present
       cidr: "{{vpc.vpc.cidr_block}}"
       tags:
