--- a/aws/create_ec2_instances.yaml
+++ b/aws/create_ec2_instances.yaml
@@ -116,7 +116,7 @@
         type: "dev_lb"
         project: "Ansible_Demo"
         provider: "AWS"
-      vpc_subnet_id: "{{subnet_ids.subnets[0].id}}"
+      vpc_subnet_id: "{{subnet_ids.subnets.id}}"
       network_interfaces:        
         - assign_public_ip: yes
     register: ec2_instance
@@ -125,15 +125,6 @@
     wait_for: host={{ item.public_dns_name  }} port=22 delay=60 timeout=320 state=started
     with_items: "{{ ec2_instance.instances }}"
 
-
-  - name: Add all instance public IPs to host group
-    add_host: hostname={{ item.public_ip }} groups=ec2hosts
-    loop: "{{ ec2_instance.instances }}"
-
   - name: debug values of new VM
     debug:
       msg: "{{ ec2_instance }}"
-
-#  - name: add new instance into inventory
-#    add_host: hostname={{item.public_ip}} groupname=tower
-#    with_items: "{{ec2.instances}}"
