--- a/aws/create_ec2_instances.yaml
+++ b/aws/create_ec2_instances.yaml
@@ -105,20 +105,20 @@
       instance_type: t2.micro
       region: "{{region}}"
       image: ami-0aa8fc2422063977a
-      security_group: "{{my_security_group.group_id}}"
+      group_id: "{{my_security_group.group_id}}"
       key_name: "ansible_automation_platform"
       count: 1
       wait: yes
       wait_timeout: 500
+      state: present
       tags:
         Name: "demo_lb_server"
         Owner: Felix
         type: "dev_lb"
         project: "Ansible_Demo"
         provider: "AWS"
-      vpc_subnet_id: "{{subnet_ids.subnets.id}}"
-      network_interfaces:        
-        - assign_public_ip: yes
+      vpc_subnet_id: "{{subnet_ids.subnets.id}}"  
+      assign_public_ip: yes
     register: ec2_instance
 
   - name: Wait for ssh to come up
