--- a/aws/create_ec2_instances.yaml
+++ b/aws/create_ec2_instances.yaml
@@ -34,7 +34,7 @@
       region: "{{region}}"
       az: "{{region}}a"
       state: present
-      cidr: "{{vpc.cidr_block}}"
+      cidr: "10.0.0.0/16"
       tags:
         name: ansible_demo_dev_subnet
     register: subnet_ids
