--- a/aws/roles/aws_ec2/tasks/main.yml
+++ b/aws/roles/aws_ec2/tasks/main.yml
@@ -1,18 +1,18 @@
 ---
 # tasks file for aws_ec2
 
-  - name: launch an ec2 instance
+  - name: "Provision EC2 instance"
     ec2_instance:
       instance_type: "{{ instance_type }}"
       region: "{{ region }}"
       image_id: "{{ image_id }}"
       key_name: "{{ key_name }}"
-      count: "{{ count }}"
+      count: "1"
       wait: yes
       wait_timeout: 500
       state: present
       tags:
-        Name: "demo_lb_server"
+        Name: "{{ item }}"
         Owner: Felix
         type: "{{ type }}"
         project: "Ansible_Demo"
@@ -21,4 +21,4 @@
       security_group: "{{my_security_group.group_id}}"
       network_interfaces:
         - assign_public_ip: yes
-    register: ec2_instance
+    loop: "{{ server_name }}"
