--- a/aws/roles/haproxy-config/tasks/main.yml
+++ b/aws/roles/haproxy-config/tasks/main.yml
@@ -6,7 +6,8 @@
       # epel = Extra Packages for Enterprise Linux
     - name: Ensure the epel repo is present
       yum:
-        name: https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
+        name: https://dl.fedoraproject.org/pub/epel/epel-release-latest-9.noarch.rpm 
+        # name: https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
         disable_gpg_check: yes
         state: present
 
