--- a/aws/roles/haproxy-config/tasks/main.yml
+++ b/aws/roles/haproxy-config/tasks/main.yml
@@ -1,6 +1,7 @@
 ---
 # tasks file for haproxy-config
 - name: Configure HA Load Balancer with haproxy
+  become: true
 
   block: 
       # epel = Extra Packages for Enterprise Linux
