--- a/aws/roles/haproxy-config/tasks/main.yml
+++ b/aws/roles/haproxy-config/tasks/main.yml
@@ -1,13 +1,13 @@
 ---
 # tasks file for haproxy-config
 - name: Configure HA Load Balancer with haproxy
-  become: true
 
   block: 
       # epel = Extra Packages for Enterprise Linux
     - name: Ensure the epel repo is present
       yum:
-        name: https://dl.fedoraproject.org/pub/epel/epel-release-latest-9.noarch.rpm 
+        name: https://dl.fedoraproject.org/pub/epel/epel-release-latest-8.noarch.rpm 
+        # name: https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
         disable_gpg_check: yes
         state: present
 
@@ -26,4 +26,4 @@
         name: haproxy
         state: started
         enabled: true
-  when: lb_group_name  in group_names
+  when: lb_group_name in group_names
