--- a/aws/roles/aws_ec2/tasks/main.yml
+++ b/aws/roles/aws_ec2/tasks/main.yml
@@ -3,7 +3,7 @@
 
   - name: "Provision EC2 instance"
     ec2_instance:
-      instance_type: instance_type: "{{ instance_type | default('t2.micro') }}"
+      instance_type: "{{ instance_type | default('t2.micro') }}"
       region: "{{ region }}"
       image_id: "{{ image_id }}"
       key_name: "{{ key_name }}"
