--- a/aws/roles/aws_ec2/tasks/main.yml
+++ b/aws/roles/aws_ec2/tasks/main.yml
@@ -8,8 +8,7 @@
       image_id: "{{ image_id }}"
       key_name: "{{ key_name }}"
       count: "1"
-      wait: yes
-      wait_timeout: 500
+      wait: true
       state: present
       tags:
         Name: "{{ item }}"
