--- a/aws/roles/aws_ec2/tasks/main.yml
+++ b/aws/roles/aws_ec2/tasks/main.yml
@@ -23,6 +23,6 @@
     loop: "{{ server_name }}"
     register: ec2_instance
 
-  - name: Wait for ssh to come up
-    wait_for: host={{ item.public_dns_name  }} port=22 delay=60 timeout=320 state=started
-    with_items: "{{ ec2_instance.instances }}"
+  # - name: Wait for ssh to come up
+  #   wait_for: host={{ item.public_dns_name  }} port=22 delay=60 timeout=320 state=started
+  #   with_items: "{{ ec2_instance.instances }}"
