refactor to add full collection name

--- a/aws/roles/aws_vpc/tasks/main.yml
+++ b/aws/roles/aws_vpc/tasks/main.yml
@@ -48,7 +48,7 @@
     register: public_route_table
 
   - name: create a security group
-    ec2_group:
+    amazon.aws.ec2_group:
       name: AnsibleSecurity
       description: "Ansible Security Group"
       region: "{{region}}"
