--- a/aws/roles/haproxy-config/tasks/main.yml
+++ b/aws/roles/haproxy-config/tasks/main.yml
@@ -5,23 +5,23 @@
   block: 
       # epel = Extra Packages for Enterprise Linux
     - name: Ensure the epel repo is present
-      yum:
+      ansible.builtin.yum:
         name: https://dl.fedoraproject.org/pub/epel/epel-release-latest-8.noarch.rpm 
         disable_gpg_check: yes
         state: present
 
     - name: install haproxy
-      package:
+      ansible.builtin.package:
         name: haproxy
         state: present
 
     - name: copy haproxy conf
-      template:
+      ansible.builtin.template:
         src: templates/haproxy.cfg.j2
         dest: /etc/haproxy/haproxy.cfg
 
     - name: start and enable haproxy
-      service:
+      ansible.builtin.service:
         name: haproxy
         state: started
         enabled: true
