change the tag name

--- a/aws/install_ws.yml
+++ b/aws/install_ws.yml
@@ -3,7 +3,7 @@
   hosts: all
 
   vars:
-    ws_group_name: tag_dev_ws
+    ws_group_name: tag_type_dev_ws
 
   roles:
     - role: jboss-eap-config
