--- a/aws/roles/haproxy-config/vars/main.yml
+++ b/aws/roles/haproxy-config/vars/main.yml
@@ -1,4 +1,4 @@
 ---
 # vars file for haproxy-config
-lb_group_name: "tag_dev_lb"
-ws_group_name: "tag_dev_ws"
+lb_group_name: "tag_type_dev_lb"
+ws_group_name: "tag_type_dev_ws"
