--- a/aws/delete_aws_ec2_infra.yaml
+++ b/aws/delete_aws_ec2_infra.yaml
@@ -7,6 +7,8 @@
   vars:
     region: "us-east-2"
     project_name: "Ansible_Demo"
+    subnet_cidr: "10.0.0.0/16"
+    vpc_cidr: "10.0.0.0/16"
 
   tasks:
   - name: Get ec2 instance info for project "{{ project_name }}"
@@ -16,15 +18,61 @@
         "tag:project": "{{ project_name }}"
     register: ec2_list
 
-  - debug: 
-      msg: "{{ item.instance_id }}"
-    loop: "{{ ec2_list.instances }}"
-
-
-  - name: Delete EC2 vms with project name "{{ project_name }}"
+  - name: Delete EC2 instance for project "{{ project_name }}"
     amazon.aws.ec2_instance: 
       instance_ids: "{{ item.instance_id }}"
       region: "{{ region }}"
       state: "absent"
       wait: true
     with_items: "{{ ec2_list.instances }}"
+
+  - name: Get the vpc details for project "{{ project_name }}"
+    amazon.aws.ec2_vpc_net_info:
+      region: "{{ region }}"
+      filters:
+        "tag:project": "{{ project_name }}"
+      register: all_vpcs
+
+- name: Delete Route Table for project "{{ project_name }}"
+  community.aws.ec2_vpc_route_table:
+    region: "{{ region }}"
+    vpc_id: "{{ all_vpcs.vpcs[0].vpc_id }}"
+    tags:
+      Name: "ansible_demo_dev_route_table"
+    state: absent
+
+- name: Delete internet gateway for project "{{ project_name }}"
+  community.aws.ec2_vpc_igw:
+    region: "{{ region }}"
+    vpc_id: "{{ item.vpc_id }}"
+    state: absent
+  loop: '{{ all_vpcs.vpcs }}'
+
+- name: Delete Subnet for project "{{ project_name }}"
+  amazon.aws.ec2_vpc_subnet:
+    region: "{{ region }}"
+    vpc_id: "{{ all_vpcs.vpcs[0].vpc_id }}"
+    cidr: "{{subnet_cidr:}}"
+    state: absent
+
+- name: Gather information about all Security Groups for project "{{ project_name }}"
+  amazon.aws.ec2_group_info:
+    region: "{{ region }}"
+    filters:
+      vpc-id: "{{ all_vpcs.vpcs[0].vpc_id }}"
+  register: all_sg
+
+- name: Delete Security Groups in VPC {{ all_vpcs.vpcs[0].vpc_id }} by ID
+  amazon.aws.ec2_group:
+    region: "{{ region }}"
+    group_id: "{{ item.group_id }}"
+    state: absent
+  loop: "{{ all_sg.security_groups }}"
+  when: item.group_name != "default"
+
+- name: Delete AWS VPC for project "{{ project_name }}"
+  amazon.aws.ec2_vpc_net:
+    name: "ansible_demo_dev"
+    cidr_block: "{{ vpc_cidr }}"
+    region: "{{ region }}"
+    state: absent
