--- a/aws/delete_aws_ec2_infra.yaml
+++ b/aws/delete_aws_ec2_infra.yaml
@@ -33,46 +33,46 @@
         "tag:project": "{{ project_name }}"
       register: all_vpcs
 
-- name: Delete Route Table for project
-  community.aws.ec2_vpc_route_table:
-    region: "{{ region }}"
-    vpc_id: "{{ all_vpcs.vpcs[0].vpc_id }}"
-    tags:
-      Name: "ansible_demo_dev_route_table"
-    state: absent
+  - name: Delete Route Table for project "{{ project_name }}"
+    community.aws.ec2_vpc_route_table:
+      region: "{{ region }}"
+      vpc_id: "{{ all_vpcs.vpcs[0].vpc_id }}"
+      tags:
+        Name: "ansible_demo_dev_route_table"
+      state: absent
 
-- name: Delete internet gateway for project
-  community.aws.ec2_vpc_igw:
-    region: "{{ region }}"
-    vpc_id: "{{ item.vpc_id }}"
-    state: absent
-  loop: '{{ all_vpcs.vpcs }}'
+  - name: Delete internet gateway for project "{{ project_name }}"
+    community.aws.ec2_vpc_igw:
+      region: "{{ region }}"
+      vpc_id: "{{ item.vpc_id }}"
+      state: absent
+    loop: '{{ all_vpcs.vpcs }}'
 
-- name: Delete Subnet
-  amazon.aws.ec2_vpc_subnet:
-    region: "{{ region }}"
-    vpc_id: "{{ all_vpcs.vpcs[0].vpc_id }}"
-    cidr: "{{subnet_cidr:}}"
-    state: absent
+  - name: Delete Subnet for project "{{ project_name }}"
+    amazon.aws.ec2_vpc_subnet:
+      region: "{{ region }}"
+      vpc_id: "{{ all_vpcs.vpcs[0].vpc_id }}"
+      cidr: "{{subnet_cidr:}}"
+      state: absent
 
-- name: Gather information about all Security Groups
-  amazon.aws.ec2_group_info:
-    region: "{{ region }}"
-    filters:
-      vpc-id: "{{ all_vpcs.vpcs[0].vpc_id }}"
-  register: all_sg
+  - name: Gather information about all Security Groups for project "{{ project_name }}"
+    amazon.aws.ec2_group_info:
+      region: "{{ region }}"
+      filters:
+        vpc-id: "{{ all_vpcs.vpcs[0].vpc_id }}"
+    register: all_sg
 
-- name: Delete Security Groups in VPC {{ all_vpcs.vpcs[0].vpc_id }} by ID
-  amazon.aws.ec2_group:
-    region: "{{ region }}"
-    group_id: "{{ item.group_id }}"
-    state: absent
-  loop: "{{ all_sg.security_groups }}"
-  when: item.group_name != "default"
+  - name: Delete Security Groups in VPC {{ all_vpcs.vpcs[0].vpc_id }} by ID
+    amazon.aws.ec2_group:
+      region: "{{ region }}"
+      group_id: "{{ item.group_id }}"
+      state: absent
+    loop: "{{ all_sg.security_groups }}"
+    when: item.group_name != "default"
 
-- name: Delete AWS VPC for project
-  amazon.aws.ec2_vpc_net:
-    name: "ansible_demo_dev"
-    cidr_block: "{{ vpc_cidr }}"
-    region: "{{ region }}"
-    state: absent
+  - name: Delete AWS VPC for project "{{ project_name }}"
+    amazon.aws.ec2_vpc_net:
+      name: "ansible_demo_dev"
+      cidr_block: "{{ vpc_cidr }}"
+      region: "{{ region }}"
+      state: absent
