change status to started on EC2 instance

--- a/aws/roles/aws_ec2/tasks/main.yml
+++ b/aws/roles/aws_ec2/tasks/main.yml
@@ -9,7 +9,7 @@
       key_name: "{{ key_name }}"
       count: "1"
       wait: true
-      state: running
+      state: started
       tags:
         Name: "{{ item }}"
         Owner: Felix
