change the key name

--- a/windows_server_aws/inventory/values.yml
+++ b/windows_server_aws/inventory/values.yml
@@ -4,7 +4,7 @@ all:
     AWS_SECRET_KEY: [KEY HERE]
     project_name: "Ansible_Windows_Demo"
     routigTable_name: "rt_ansible_window_demo"
-    key_name: "administrator_key"
+    key_name: "ansible_windows_demo_admin_key"
     region: "us-east-2"
     zone: "us-east-2a"
     image_id: "ami-0c808db6baea2d0ed"
