--- a/windows_server_aws/aap/create_window_server_farms.yml
+++ b/windows_server_aws/aap/create_window_server_farms.yml
@@ -122,7 +122,7 @@
 
     - name: Get admin password
       community.aws.ec2_win_password:
-        instance_id: "{{ ec2_instance.instances[0].instance_id }}"
+        instance_id: "{{ ec2_instance.instance_id }}"
         region: "{{ region }}"
         key_date: "{{ rsa_key.key.private_key }}"
         wait: true
