--- a/windows_server_aws/aap/create_window_server_farms.yml
+++ b/windows_server_aws/aap/create_window_server_farms.yml
@@ -120,14 +120,18 @@
       loop: "{{ server_name }}"
       register: ec2_instance
 
-    - name: Get admin password
-      community.aws.ec2_win_password:
-        instance_id: "{{ ec2_instance[0].instance_id }}"
-        region: "{{ region }}"
-        key_date: "{{ rsa_key.key.private_key }}"
-        wait: true
-      register: password
+    - name: Print ece_instance
+      ansible.builtin.debug:
+        msg: "Ansible ec2_instance : {{ ec2_instance  }}"
 
-    - name: show password
-      debug:
-        msg: "{{ password.win_password }}"
+    # - name: Get admin password
+    #   community.aws.ec2_win_password:
+    #     instance_id: "{{ ec2_instance[0].instance_id }}"
+    #     region: "{{ region }}"
+    #     key_date: "{{ rsa_key.key.private_key }}"
+    #     wait: true
+    #   register: password
+
+    # - name: show password
+    #   debug:
+    #     msg: "{{ password.win_password }}"
