--- a/windows_server_aws/aap/create_window_server_farms.yml
+++ b/windows_server_aws/aap/create_window_server_farms.yml
@@ -124,14 +124,14 @@
       ansible.builtin.debug:
         msg: "Ansible ec2_instance : {{ ec2_instance  }}"
 
-    # - name: Get admin password
-    #   community.aws.ec2_win_password:
-    #     instance_id: "{{ ec2_instance[0].instance_id }}"
-    #     region: "{{ region }}"
-    #     key_date: "{{ rsa_key.key.private_key }}"
-    #     wait: true
-    #   register: password
+    - name: Get admin password
+      community.aws.ec2_win_password:
+        instance_id: "{{ ec2_instance.instance_id[0] }}"
+        region: "{{ region }}"
+        key_date: "{{ rsa_key.key.private_key }}"
+        wait: true
+      register: password
 
-    # - name: show password
-    #   debug:
-    #     msg: "{{ password.win_password }}"
+    - name: show password
+      debug:
+        msg: "{{ password.win_password }}"
