--- a/windows_server_aws/aap/create_window_server_farms.yml
+++ b/windows_server_aws/aap/create_window_server_farms.yml
@@ -126,7 +126,8 @@
 
     - name: Get admin password
       community.aws.ec2_win_password:
-        instance_id: "{{ ec2_instance[0].instance.instance_id }}"
+        instance_id: "i-02c27e43ed95e84e0"
+        #"{{ ec2_instance[0].instance.instance_id }}"
         region: "{{ region }}"
         key_date: "{{ rsa_key.key.private_key }}"
         wait: true
