--- a/windows_server_aws/aap/create_window_server_farms.yml
+++ b/windows_server_aws/aap/create_window_server_farms.yml
@@ -123,7 +123,7 @@
         instance_id: 'i-0f908f7d12edb09ea'
         #"{{ ec2_instance[0].instance.instance_id }}"
         region: "{{ region }}"
-        key_data: "{{ window_machin.private_key.private_key }}"
+        key_data: "{{ window_machine.key.private_key }}"
         wait: true
       register: password
 
