--- a/windows_server_aws/aap/create_window_server_farms.yml
+++ b/windows_server_aws/aap/create_window_server_farms.yml
@@ -23,6 +23,10 @@
 
   tasks:
 
+    - name: show KEY
+      debug:
+        msg: '{{ lookup("env", "window_machine.key.private_key" ) }}'
+
     - name: Create a VPC in AWS
       amazon.aws.ec2_vpc_net:
         name: "{{  vpc_name }}"
